--- a/1.R-Intro.html
+++ b/1.R-Intro.html
@@ -251,7 +251,7 @@ Dr.&nbsp;Muhammed Fatih TÜZEN
 <li class="fragment">Verilerin İçe ve Dışa Aktarılması</li>
 </ul>
 <div>
-<p>📦 Ders Materyalleri : <a href="https://github.com/kullanici/proje">github.com/kullanici/proje</a></p>
+<p>📦 Ders Materyalleri: <a href="https://github.com/MFatihTuzen/UYIK-R" class="uri">https://github.com/MFatihTuzen/UYIK-R</a></p>
 </div>
 </div>
 </section>
