--- a/1.R-Intro.html
+++ b/1.R-Intro.html
@@ -258,42 +258,42 @@ Dr.&nbsp;Muhammed Fatih TÜZEN
 <section id="r-programlama-hakkında" class="slide level2">
 <h2>R Programlama Hakkında</h2>
 <ul>
-<li class="fragment"><strong>R</strong>, istatistiksel hesaplama ve veri görselleştirme için geliştirilmiş açık kaynaklı bir programlama dilidir.</li>
-<li class="fragment">CRAN (Comprehensive R Archive Network) üzerinden <strong>19.000+ paket</strong> erişilebilir.</li>
-<li class="fragment">Veri analizi, istatistiksel modelleme, makine öğrenmesi, raporlama (R Markdown, Quarto) ve web uygulamaları (Shiny) gibi alanlarda yoğun olarak kullanılır.</li>
-<li class="fragment">Akademiden endüstriye, kamu kurumlarından start-up’lara kadar geniş kullanım alanı vardır.</li>
+<li><strong>R</strong>, istatistiksel hesaplama ve veri görselleştirme için geliştirilmiş açık kaynaklı bir programlama dilidir.</li>
+<li>CRAN (Comprehensive R Archive Network) üzerinden <strong>19.000+ paket</strong> erişilebilir.</li>
+<li>Veri analizi, istatistiksel modelleme, makine öğrenmesi, raporlama (R Markdown, Quarto) ve web uygulamaları (Shiny) gibi alanlarda yoğun olarak kullanılır.</li>
+<li>Akademiden endüstriye, kamu kurumlarından start-up’lara kadar geniş kullanım alanı vardır.</li>
 </ul>
 </section>
 <section id="r-ve-rstudio-bağlantıları" class="slide level2">
 <h2>R ve RStudio Bağlantıları</h2>
 <ul>
-<li class="fragment"><p>🔗 <strong>R İndir (CRAN):</strong><br>
+<li><p>🔗 <strong>R İndir (CRAN):</strong><br>
 <a href="https://cran.r-project.org/" class="uri">https://cran.r-project.org/</a></p></li>
-<li class="fragment"><p>🧰 <strong>RStudio IDE (R için Gelişmiş Arayüz):</strong><br>
+<li><p>🧰 <strong>RStudio IDE (R için Gelişmiş Arayüz):</strong><br>
 <a href="https://posit.co/download/rstudio-desktop/" class="uri">https://posit.co/download/rstudio-desktop/</a></p></li>
-<li class="fragment"><p>🧠 Öğrenme Kaynakları:</p>
+<li><p>🧠 Öğrenme Kaynakları:</p>
 <ul>
-<li class="fragment"><a href="https://r4ds.hadley.nz">R for Data Science</a></li>
-<li class="fragment"><a href="https://www.tidyverse.org">Tidyverse.org</a></li>
-<li class="fragment"><a href="https://www.bigbookofr.com/">Big Book of R</a></li>
-<li class="fragment">Türkçe kaynak: <a href="https://rprogramlama.netlify.app">rprogramlama.netlify.app</a></li>
+<li><a href="https://r4ds.hadley.nz">R for Data Science</a></li>
+<li><a href="https://www.tidyverse.org">Tidyverse.org</a></li>
+<li><a href="https://www.bigbookofr.com/">Big Book of R</a></li>
+<li>Türkçe kaynak: <a href="https://rprogramlama.netlify.app">rprogramlama.netlify.app</a></li>
 </ul></li>
 </ul>
 </section>
 <section id="neler-yapılabilir" class="slide level2">
 <h2>Neler Yapılabilir?</h2>
 <ul>
-<li class="fragment">📊 Keşifsel Veri Analizi<br>
+<li>📊 Keşifsel Veri Analizi<br>
 </li>
-<li class="fragment">📈 Veri Görselleştirme (ggplot2)<br>
+<li>📈 Veri Görselleştirme (ggplot2)<br>
 </li>
-<li class="fragment">🤖 Makine Öğrenmesi<br>
+<li>🤖 Makine Öğrenmesi<br>
 </li>
-<li class="fragment">🧮 Regresyon, hipotez testleri, zaman serisi<br>
+<li>🧮 Regresyon, hipotez testleri, zaman serisi<br>
 </li>
-<li class="fragment">🌐 Shiny ile etkileşimli web uygulamaları<br>
+<li>🌐 Shiny ile etkileşimli web uygulamaları<br>
 </li>
-<li class="fragment">📄 Quarto ile otomatik raporlama (PDF, HTML, slayt)</li>
+<li>📄 Quarto ile otomatik raporlama (PDF, HTML, slayt)</li>
 </ul>
 <blockquote>
 <p>“R ile veri değil, anlam anlatırsınız.”</p>
@@ -1086,6 +1086,7 @@ Levels: İlkokul &lt; Lise &lt; Üniversite</code></pre>
 </p>
 <p>Muhammed Fatih TÜZEN</p>
 <p>e-posta: <strong><code>fatih.tuzen@tuik.gov.tr</code></strong></p>
+<p>Linkedin: <a href="https://www.linkedin.com/in/dr-m-fatih-t-2b2a4328/"><code>https://www.linkedin.com/in/dr-m-fatih-t-2b2a4328/</code></a></p>
 
 </section>
     </div>
