data preprocess presentation added

--- a/4.basic_statistics.html
+++ b/4.basic_statistics.html
@@ -279,9 +279,9 @@ Ancak yaklaşımları, motivasyonları ve kullanımları farklılık gösterir.<
 <h3 id="temel-farklılıklar">⚖️ Temel Farklılıklar</h3>
 <table class="caption-top">
 <colgroup>
-<col style="width: 25%">
+<col style="width: 26%">
 <col style="width: 30%">
-<col style="width: 44%">
+<col style="width: 43%">
 </colgroup>
 <thead>
 <tr class="header">
@@ -966,7 +966,8 @@ r = \frac{ \sum (x_i - \bar{x})(y_i - \bar{y}) }{ \sqrt{ \sum (x_i - \bar{x})^2 
 ✅ Veriye nasıl yaklaşmamız gerektiğini tartıştık</p>
 <h3 id="unutma">🎯 Unutma:</h3>
 <p>İyi bir veri analisti olmak, <strong>sayılara bakmak değil, onları anlamaktır</strong>.</p>
-<p>📬 Sorularınız için:<br>
+<p>📬 Sorularınız için:</p>
+<p>📧 fatih.tuzen@tuik.gov.tr<br>
 📎 <a href="https://www.linkedin.com/in/dr-m-fatih-t-2b2a4328/">LinkedIn: Dr.&nbsp;M. Fatih Tüzen</a></p>
 
 </section>
